src/test/deca/context/valid/personalTests/convFloat.deca
// Test CONVFLOAT

{
    int a = 5;
    float b = a;
    println(a);
    println(b);
}