src/test/deca/context/invalid/personalTests/FieldNoClass.deca
class A{
    int a;
}

{
    A a;
    int b;
    a = new A();
    b.a;
}